backend/api/tests/integration/snapshots/integration__image__recent__create.snap
---
source: tests/integration/image.rs
expression: body

---
{
  "id": "3095d05e-f2c7-11ea-89c3-3b621dd74a1f",
  "library": "User",
  "last_used": "[timestamp]"
}
