backend/api/tests/integration/snapshots/integration__image__recent__create_conflict.snap
---
source: tests/integration/image.rs
expression: body

---
{
  "code": 409,
  "message": "An image with the same ID already exists in recent images list for user"
}
